working on adding pathfinding and it does not export PF?

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <script type="module" src="node_modules/kontra/kontra.mjs"></script>
+<script type="text/javascript" src="node_modules/pathfinding/visual/lib/pathfinding-browser.min.js"></script>
 <script type="module" src="main.js"></script>
 </head>
 <body>
